--- a/Data_collection+cleaning.ipynb
+++ b/Data_collection+cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP//wLLuTn3CLfsEqrIYiUg",
+      "authorship_tag": "ABX9TyPxNPCroCf7/UHLjXJsyOgo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**[Scarping tables from html page](https://colab.research.google.com/drive/1PLwGLPRO1ha0Nk4GGXiz4YprWqug9COw)**\n",
+        "**[Scraping tables from html page](https://github.com/SwethaSrikari/Predicting-EV-charging-demand/blob/main/Web_scraping_Colorado_weather.ipynb)**\n",
         "\n",
         "If there are multiple tables and you don't know the table number of the table you want to find - \n",
         "1. Right click on the page and Select `Inspect`\n",
